RESOLVED FIXED287350
Grid container with `overflow: visible/clip` incorrectly account for the inline margin end of grid items
https://bugs.webkit.org/show_bug.cgi?id=287350
Summary Grid container with `overflow: visible/clip` incorrectly account for the inli...
alan
Reported 2025-02-08 18:39:08 PST
ssia
Attachments
Patch (5.89 KB, patch)
2025-02-08 18:45 PST, alan
no flags
[fast-cq]Patch (5.92 KB, patch)
2025-02-08 18:54 PST, alan
no flags
alan
Comment 1 2025-02-08 18:45:17 PST
alan
Comment 2 2025-02-08 18:54:26 PST
Created attachment 474170 [details] [fast-cq]Patch
EWS
Comment 3 2025-02-10 05:20:16 PST
Committed 290156@main (61d38fdfbee9): <https://commits.webkit.org/290156@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474170 [details].
Radar WebKit Bug Importer
Comment 4 2025-02-10 05:21:14 PST
Note You need to log in before you can comment on or make changes to this bug.