Grid container with `overflow: visible/clip` incorrectly account for the inline margin end of grid items https://bugs.webkit.org/show_bug.cgi?id=287350

Reviewed by Antti Koivisto.

This change aligns WebKit's scrollable overflow (layout overflow) behavior with Chrome and Firefox.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-with-child-margin-inline-end-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-with-child-margin-inline-end.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::layoutOverflowRectForPropagation const):

Canonical link: https://commits.webkit.org/290156@main